Docs: Re-add docs to repository for github pages generation

--- a/docs/00.-Installation-and-Integration.md
+++ b/docs/00.-Installation-and-Integration.md
@@ -35,3 +35,36 @@ It extends symfony/serializer functionality and is heavily inspired by doctrine 
 [15. Scenarios](15.-Scenarios.md#scenarios) \
 [16. Interfaces and Abstract Classes](16.-Interfaces-and-Abstract-Classes.md#interfaces-and-abstract-classes) \
 [17. Context](17.-Context.md#context)
+
+# Installation and Integration
+
+VOM is available on packagist. To install, simply require it via composer.
+
+```bash
+composer require zolex/vom ^1.0
+```
+
+## Symfony
+
+When using symfony frakmework, the package also integrates as a bundle. With flex and autoconfiguration there is nothing else to do.
+
+_Without autoconfiguration, or if you choose to not run symfony/flex recipe generation, you have to enable the bundle manually by adding it to `config/bundles.php`._
+
+```php
+<?php
+
+return [
+    // ...
+ 
+   Zolex\VOM\Symfony\Bundle\ZolexVOMBundle::class => ['all' => true],
+    // ...
+];
+```
+
+## Laravel
+
+VOM also comes with a Laravel Service Provider. After installing with composer, the `VersatileObjectMapper` class is registered for Dependency Injection and can also be accessed using `app()`, `resolve()` etc.
+
+\
+\
+Continue reading - [01  The ObjectMapper](01.-The-Object-Mapper.md)
