--- a/docs/04.-Root-and-Relative-Accessor.md
+++ b/docs/04.-Root-and-Relative-Accessor.md
@@ -35,3 +35,107 @@ It extends symfony/serializer functionality and is heavily inspired by doctrine 
 [15. Scenarios](15.-Scenarios.md#scenarios) \
 [16. Interfaces and Abstract Classes](16.-Interfaces-and-Abstract-Classes.md#interfaces-and-abstract-classes) \
 [17. Context](17.-Context.md#context)
+
+# Root and Relative Accessor
+
+## Root Accesssor
+
+The `root` argument is a boolean and can be used on `#[VOM\Attribute]` and `#[VOM\Property]`. It lets VOM apply the accessor from the root of the source data.
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class RootClass
+{
+    #[VOM\Property]
+    public string $rooted;
+    
+    #[VOM\Property]
+    public NestedClass $nested;
+}
+
+#[VOM\Model]
+class NestedClass
+{
+    #[VOM\Property(root: true)]
+    public string $value;
+    
+    #[VOM\Property]
+    public ThirdDimension $deeper;
+}
+
+#[VOM\Model]
+class ThirdDimension
+{
+    #[VOM\Property(root: true)]
+    public string $effectivelyOnRoot;
+}
+```
+
+```php
+$data = [
+    'rooted' => 'I live on the root',
+    'value' => 'I am here too!',
+    'effectivelyOnRoot' => 'Where else would you expect me?'
+];
+
+$objectMapper->denormalize($data, RootClass::class);
+```
+
+## Relative Accessor
+
+The `relative` argument can be used on `#[VOM\Attribute]` and `#[VOM\Property]`. It lets VOM look the given number of levels upwards in the data structure and apply the accessor from there.
+
+```php
+#[VOM\Model]
+class LevelZero
+{
+    #[VOM\Property]
+    public int $value;
+    
+    #[VOM\Property]
+    public LevelOne $one;
+}
+
+#[VOM\Model]
+class LevelOne
+{
+    #[VOM\Property]
+    public int $value;
+    
+    #[VOM\Property]
+    public LevelTwo $two;
+}
+
+#[VOM\Model]
+class LevelTwo
+{
+    #[VOM\Property(relative: 1)]
+    public int $value;
+}
+```
+
+```php
+$data = [
+    'value' => 0,
+    'one' => [
+        'value' => 1,
+        'two' => [
+            'value' => 2,
+        ],
+    ],
+];
+
+$objectMapper->denormalize($data, LevelZero::class);
+// LevelTwo->value will be 1
+```
+
+
+
+> [!NOTE]
+> A combination of actual accessors, `accessor: false`, `root: true` and `relative: {int}` gives you full control over the data mapping. Some results can be achieved with different combinations of these settings, but there are usecases which can only be achieved with a clever combination of all of them.
+
+\
+\
+Continue reading - [05. Data Types](05.-Data-Types.md)
