--- a/docs/07.-Constructor-Arguments.md
+++ b/docs/07.-Constructor-Arguments.md
@@ -35,3 +35,73 @@ It extends symfony/serializer functionality and is heavily inspired by doctrine 
 [15. Scenarios](15.-Scenarios.md#scenarios) \
 [16. Interfaces and Abstract Classes](16.-Interfaces-and-Abstract-Classes.md#interfaces-and-abstract-classes) \
 [17. Context](17.-Context.md#context)
+
+# Constructor Arguments
+
+Similar to the `VOM\Property` attribute there is the `VOM\Argument` attribute, that can be added on constructor arguments.
+All options for the property attribute also exist for the argument attribute.
+_(Actually both are using the same abstract class under the hood, this differentiation predominantly exists for better semantics)._
+VOM will pass the mapped values into the constructor. All required arguments must be configured with the attribute,
+otherwise VOM can not create an instance of the model. Nullable arguments and those with a default value are optional.
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class ConstructorArguments
+{
+    private int $id;
+    private string $name;
+    private ?bool $nullable;
+    private bool $default;
+
+    public function __construct(
+        #[VOM\Argument]
+        int $id,
+        #[VOM\Argument(accessor: '[path][to][name]')]
+        string $name,
+        #[VOM\Argument]
+        ?bool $nullable,
+        #[VOM\Argument]
+        bool $default = true
+    ) {
+        $this->id = $id;
+        $this->name = $name;
+        $this->nullable = $nullable;
+        $this->default = $default;
+    }
+}
+```
+
+> [!NOTE]
+> When using the [`object_to_populate` context](#object-to-populate), the constructor arguments and constructor property promotion will be skipped.
+
+```php
+$objectMapper->denormalize('123:test', SerializedObject::class);
+```
+
+## Constructor Property Promotion
+
+Also, constructor property promotion can be handled by VOM in the same way as the normal constructor arguments described above.
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class PropertyPromotion
+{
+    public function __construct(
+        #[VOM\Argument]
+        private int $id,
+        #[VOM\Argument]
+        private string $name,
+        #[VOM\Argument]
+        private ?bool $nullable,
+        #[VOM\Argument]
+        private bool $default = true,
+    ) {
+ }
+```
+\
+\
+Continue reading - [08. Factories](08.-Factories.md)
