--- a/docs/10.-Normalizer-Methods.md
+++ b/docs/10.-Normalizer-Methods.md
@@ -35,3 +35,75 @@ It extends symfony/serializer functionality and is heavily inspired by doctrine 
 [15. Scenarios](15.-Scenarios.md#scenarios) \
 [16. Interfaces and Abstract Classes](16.-Interfaces-and-Abstract-Classes.md#interfaces-and-abstract-classes) \
 [17. Context](17.-Context.md#context)
+
+# Normalizer Methods
+
+Similar to the denormalizer methods, also normalizer methods can be configured to be called during normalization. These methods must not have any required arguments _(except injected dependencies)_. Normalizer methods must be prefixed with `get`, `has`, `is` or `normalize`. Groups can be added on normalizer methods with the first three prefixes (virtual property) or on the related property when using the `normalize` prefix.
+
+## Without Accessor
+
+Without an accessor, the normalizer must return an array which will be merged into the normalized data. So the keys of the returned array will be the keys in the normalized output.
+
+```php
+use Symfony\Component\Serializer\Attribute\Groups;
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class Calls
+{
+    #[VOM\Normalizer]
+    public function normalizeData(): array
+    {
+        return [
+            'normalized_key' => 'something',
+            'another_key' => 123,
+        ]
+    }
+}
+```
+
+## With Accessor
+
+If a normalizer has an accessor configured, the return value can be anything and VOM will put it at the given path.
+
+```php
+use Symfony\Component\Serializer\Attribute\Groups;
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class Calls
+{
+    #[VOM\Normalizer(accessor: '[path][in][output]')]
+    public function getAnything(): mixed
+    {
+        return 'anything, even an object or array';
+    }
+}
+```
+
+## Custom serialization
+
+The normalizer attribute can be added on the `__toString()` method. Note that in this case it must be the only normalizer on the model and return a string representation of the object.
+
+```php
+use Symfony\Component\Serializer\Attribute\Groups;
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class SerializedObject
+{
+    public int $id;
+    public string $name;
+
+    #[VOM\Normalizer]
+    public function __toString(): string
+    {
+        return $this->id . ':' . $this->name;
+    }
+}
+```
+
+See [RegExp-Extractors](https://github.com/zolex/vom/wiki/12.-RegExp-Extractors) and [Serialized Argument](https://github.com/zolex/vom/wiki/13.-Serialized-Argument) to implement an equivalent denormalizer.
+\
+\
+Continue reading - [11. Method Dependencies](11.-Method-Dependencies.md)
