--- a/docs/12.-RegExp-Extractors.md
+++ b/docs/12.-RegExp-Extractors.md
@@ -35,3 +35,68 @@ It extends symfony/serializer functionality and is heavily inspired by doctrine 
 [15. Scenarios](15.-Scenarios.md#scenarios) \
 [16. Interfaces and Abstract Classes](16.-Interfaces-and-Abstract-Classes.md#interfaces-and-abstract-classes) \
 [17. Context](17.-Context.md#context)
+
+# Regular Expression Extractors
+
+If the data is a string consisting of multiple values, you can use Regular Expression Extractors to read the properties into your model.
+
+## Single Expression
+
+On the `VOM\Model` attribute the regexp extractor must have named subpattern matching the property or mutator names.
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model(extractor: '/^(?<filename>.+),tag:(?<tag>.*),description:(?<text>.*)/')]
+class RegexpExtractorModel
+{
+    #[VOM\Property]
+    public string $filename;
+    
+    #[VOM\Property]
+    public string $tag;
+    
+    #[VOM\Property]
+    private string $text;
+
+    public function setText(string $text): void
+    {
+        $this->text = $text;
+    }
+}
+```
+
+```php
+$model = $objectMapper->denormalize('image1.jpg,tag:foobar,description:source data is shit', RegexpExtractorModel::class);
+```
+
+## Individual Expressions
+
+On the `VOM\Property` attribute the regexp extractor must have exactly one subpattern to extract the data.
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class RegexpExtractorProperty
+{
+    #[VOM\Property(extractor: '/^([^,]+)/')]
+    public string $filename;
+    
+    #[VOM\Property(extractor: '/tag:([^,]+)/')]
+    public string $tag;
+    
+    #[VOM\Property(
+        map: ['visible' => true, 'hidden' => false],
+        extractor: '/visibility:(visible|hidden)/'
+    )]
+    public bool $isVisible;
+```
+
+```php
+$model = $objectMapper->denormalize('image1.jpg,tag:foobar,visibility:hidden', RegexpExtractorProperty::class);
+```
+
+\
+\
+Continue reading - [13. Serialized Argument](13.-Serialized-Argument.md)
