--- a/docs/13.-Serialized-Argument.md
+++ b/docs/13.-Serialized-Argument.md
@@ -35,3 +35,39 @@ It extends symfony/serializer functionality and is heavily inspired by doctrine 
 [15. Scenarios](15.-Scenarios.md#scenarios) \
 [16. Interfaces and Abstract Classes](16.-Interfaces-and-Abstract-Classes.md#interfaces-and-abstract-classes) \
 [17. Context](17.-Context.md#context)
+
+# Serialized Argument
+
+In case the source data is a serialized representation of the model, the constructor, factories and denormalizer methods may have a single string argument with the `serialized` option set to `true`.
+
+> [!NOTE]
+> In most usecases, [Regular Expression Extractors](https://github.com/zolex/vom/wiki/12.-RegExp-Extractors) are a better solution for the same problem.
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class SerializedObject
+{
+    private string $filename;
+    private string $tag;
+    private string $text;
+
+    public function __construct(
+        #[VOM\Argument(serialized: true)]
+        string $data,
+    ) {
+        $parts = explode($data);
+        $this->filename = $parts[0];
+        if (substr($parts[1], 0, 4) === 'tag:') {
+            $this->tag = substr($parts[1], 4);
+        }
+        if (substr($parts[2], 0, 12) === 'description:') {
+            $this->text = substr($parts[2], 12);
+        }
+    }
+}
+```
+\
+\
+Continue reading - [14. Consistency](14.-Consistency.md)
