--- a/docs/16.-Interfaces-and-Abstract-Classes.md
+++ b/docs/16.-Interfaces-and-Abstract-Classes.md
@@ -35,3 +35,74 @@ It extends symfony/serializer functionality and is heavily inspired by doctrine 
 [15. Scenarios](15.-Scenarios.md#scenarios) \
 [16. Interfaces and Abstract Classes](16.-Interfaces-and-Abstract-Classes.md#interfaces-and-abstract-classes) \
 [17. Context](17.-Context.md#context)
+
+# Interfaces and Abstract Classes
+
+When dealing with objects that are fairly similar or share properties, you can use interfaces or abstract classes.
+VOM allows to serialize and deserialize such objects using discriminator class mapping.
+The discriminator is the property used to differentiate between the possible classes.
+
+> [!NOTE]
+> Additionally to the Symfony `DiscriminatorMap` attribute, you must provide the `VOM\Model` attribute on
+> the abstract class or interface and also the `VOM\Property` attribute on the discriminator.
+
+```php
+use Symfony\Component\Serializer\Attribute\DiscriminatorMap;
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+#[DiscriminatorMap(typeProperty: 'whichThing', mapping: [
+    'one-thing' => OneThing::class,
+    'another-thing' => AnotherThing::class,
+])]
+abstract class Thing
+{
+    #[VOM\Property]
+    public string $whichThing;
+    // ...
+}
+```
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class OneThing extends Thing
+{
+    // ...
+}
+```
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class AnotherThing extends Thing
+{
+    // ...
+}
+```
+
+Now you can denormalize using the abstract class (or interface) and VOM will create the proper model depending on the discriminator.
+
+```php
+$data = ['whichThing' => 'one-thing'];
+$thing = $objectMapper->denormalize($data, Thing::class);
+// $thing is an instance of `OneThing`
+
+$data = ['whichThing' => 'another-thing'];
+$thing = $objectMapper->denormalize($data, Thing::class);
+// $thing is an instance of `AnotherThing`
+```
+
+According to the above example, VOM will now add the `whichThing` property with the respective value during normalization:
+
+```php
+$thing = new OneThing();
+$data = $objectMapper->normalize($oneThing);
+// $data['whichThing'] will be 'one-thing'
+```
+
+\
+\
+Continue reading - [17. Context](17.-Context.md)
