--- a/docs/02.-Property-Attribute.md
+++ b/docs/02.-Property-Attribute.md
@@ -35,3 +35,97 @@ It extends symfony/serializer functionality and is heavily inspired by doctrine 
 [15. Scenarios](15.-Scenarios.md#scenarios) \
 [16. Interfaces and Abstract Classes](16.-Interfaces-and-Abstract-Classes.md#interfaces-and-abstract-classes) \
 [17. Context](17.-Context.md#context)
+
+# The Property Attribute
+
+The basic mapping is configured by adding attributes to models and properties. Every model that should be processed by VOM needs the `#[VOM\Model]` attribute, so does every property need the `#[VOM\Property]` attribute. This also applies to all nested models and properties.
+
+> [!TIP]
+> It may make sense to have nested models and properties without the `#[VOM\Model]`and `#[VOM\Property]` attributes, so they are never touched by VOM, for example if you use some of the mapped data to do further computations before returning it to the client, sending it to an API or storing it in the database.
+
+When attributes with no arguments are added to the model properties, VOM will utilize its default behavior, which essentially is exactly as the standard symfony object normalizer. In this case no actual mapping will be done, it will just inject the values from the data structure where it matches in the same structure of your models.
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class RootClass
+{
+    #[VOM\Property]
+    public string $rooted;
+    
+    #[VOM\Property]
+    public NestedClass $nested;
+}
+
+#[VOM\Model]
+class NestedClass
+{
+    #[VOM\Property]
+    public string $value;
+}
+```
+
+```php
+$data = [
+    'rooted' => 'I live on the root',
+    'nested' => (object)[
+        'value' => 'I am a nested value'
+    ];
+];
+
+$objectMapper->denormalize($data, RootClass:class);
+```
+
+As the data structures and names of all properties are identical, no additional configuration is required.
+_But as mentioned above, in this scenario you probably just want to use a standard symfony normalizer._
+
+
+## The Accessor
+
+The first argument of the property attribute is the accessor. The accessor is not just the name of a parameter but [symfony property access syntax](https://symfony.com/doc/current/components/property_access.html). When not provided, it defaults to the property's name in array-notation.
+
+```php
+#[VOM\Property('[source_param]')]
+public string $value;
+```
+
+Or to be more explicit:
+
+```php
+#[VOM\Property(accessor: '[source_param]')]
+public string $value;
+```
+
+The following example maps the value for `$fromTheDeep` from a nested array in the source data.
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class RootClass
+{
+    #[VOM\Property]
+    public string $onTheRoot;
+    
+    #[VOM\Property('[deeper][inThe][structure]')]
+    public string $fromTheDeep;
+}
+```
+
+```php
+$data = [
+    'onTheRoot' => 'I live on the root',
+    'deeper' [
+        'inThe' => [
+            'structure' => 'I live somewhere deeper in the data structure'
+        ]
+    ]
+];
+
+$objectMapper->denormalize($data, RootClass::class);
+```
+
+\
+\
+Continue reading - [03. Disable Nesting](03.-Disable-Nesting.md)
