--- a/docs/03.-Disable-Nesting.md
+++ b/docs/03.-Disable-Nesting.md
@@ -35,3 +35,88 @@ It extends symfony/serializer functionality and is heavily inspired by doctrine 
 [15. Scenarios](15.-Scenarios.md#scenarios) \
 [16. Interfaces and Abstract Classes](16.-Interfaces-and-Abstract-Classes.md#interfaces-and-abstract-classes) \
 [17. Context](17.-Context.md#context)
+
+# Disable Nesting
+
+The data structures can be as deeply nested as you want. By default, nesting is enabled. That is when no accessor is given or the accessor is symfony property access syntax.
+
+If a property is another `VOM\Model` (or any type of collection that contains models) and it has `accessor: false` configured, VOM will look for the nested model's properties on the same level as the property itself.
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class RootClass
+{
+    #[VOM\Property]
+    public string $rooted;
+    
+    #[VOM\Property(accessor: false)]
+    public NestedClass $nested;
+}
+
+#[VOM\Model]
+class NestedClass
+{
+    #[VOM\Property]
+    public string $value;
+}
+```
+
+```php
+$data = [
+    'rooted' => 'I live on the root',
+    'value' => 'I am on the data root too'
+];
+
+$objectMapper->denormalize($data, RootClass::class);
+```
+
+VOM only disables nesting for properties, which explicitly have the accessor set to false. So other models that are deeper nested will not be flattened. This allows mapping between nested and _partially_ flattened data structures.
+
+```php
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class RootClass
+{
+    #[VOM\Property]
+    public string $rooted;
+    
+    #[VOM\Property(accessor: false)]
+    public NestedClass $nested;
+}
+
+#[VOM\Model]
+class NestedClass
+{
+    #[VOM\Property]
+    public string $value;
+    
+    #[VOM\Property]
+    public ThirdDimension $deeper;
+}
+
+#[VOM\Model]
+class ThirdDimension
+{
+    #[VOM\Property]
+    public string $effectivelyOnSecondDimension;
+}
+```
+
+```php
+$data = [
+    'rooted' => 'I live on the root',
+    'value' => 'I am here too!',
+    'deeper' [
+        'effectivelyFromSecondDimension' => 'I am a nested value on the second dimension'
+    ]
+];
+
+$objectMapper->denormalize($data, RootClass::class);
+```
+
+\
+\
+Continue reading - [04. Root and Relative Accessor](04.-Root-and-Relative-Accessor.md)
