--- a/docs/08.-Factories.md
+++ b/docs/08.-Factories.md
@@ -35,3 +35,104 @@ It extends symfony/serializer functionality and is heavily inspired by doctrine 
 [15. Scenarios](15.-Scenarios.md#scenarios) \
 [16. Interfaces and Abstract Classes](16.-Interfaces-and-Abstract-Classes.md#interfaces-and-abstract-classes) \
 [17. Context](17.-Context.md#context)
+
+# Factories
+
+## Factory Methods
+
+An alternative to injecting values in the model's constructor, it is also possible to configure factory methods on the model using the `VOM\Factory` together with the `VOM\Argument` attributes.
+
+```php
+#[VOM\Model]
+class ModelWithFactory
+{
+    private string $modelName;
+    private string|int $modelGroup;
+
+    private function __construct()
+    {
+    }
+
+    #[VOM\Factory]
+    public static function create(
+        #[VOM\Argument]
+        string $name,
+        #[VOM\Argument]
+        string|int|null $group
+    ): self {
+        $instance = new self();
+        $instance->setModelName($name);
+        if (null !== $group) {
+            $instance->setModelGroup($group);
+        }
+
+        return $instance;
+    }
+    
+    public function setModelName(string $name): void
+    {
+        $this->modelName = $name;
+    }
+    
+    public function setModelGroup(string|int $group): void
+    {
+        $this->mdoelGroup = $group;
+    }
+}
+```
+
+In the case that your source data is inconsistent and/or your model is instantiable with different sets of required properties, you can provide multiple factories that VOM will try to instantiate your model with.
+Optionally you can provide a priority for each factory, the higher the value, the earlier VOM with call it. If no priority is given, the order of appearance in the code is used. The first successful factory method wins.
+
+```php
+#[VOM\Model]
+class ModelWithFactory
+{
+    #[VOM\Factory]
+    public static function createWithSetOne(/* ... */): self
+    {
+        // ...
+    }
+    
+    #[VOM\Factory(priority: 100)]
+    public static function createWithSetTwo(/* ... */): self
+    {
+        // ...
+    }
+}
+```
+
+## Factory in another class
+
+It is also possible to create a factory in another class, for example in a (Doctrine) repository.
+
+```php
+#[VOM\Model(factory: [RepositoryWithFactory::class, 'createModelInstance'])]
+class ModelWithCallableFactory
+{
+    // ...
+}
+```
+
+```php
+class RepositoryWithFactory
+{
+    public static function createModelInstance(
+        #[VOM\Argument]
+        string $name,
+        #[VOM\Argument]
+        string|int|null $group = null,
+    ): ModelWithCallableFactory {
+        $model = new ModelWithCallableFactory();
+        $model->setName($name);
+        if (null !== $group) {
+            $model->setGroup($group);
+        }
+
+        return $model;
+    }
+}
+```
+\
+\
+Continue reading - [09. Denormalizer Methods](09.-Denormalizer-Methods.md)
