--- a/docs/14.-Consistency.md
+++ b/docs/14.-Consistency.md
@@ -35,3 +35,48 @@ It extends symfony/serializer functionality and is heavily inspired by doctrine 
 [15. Scenarios](15.-Scenarios.md#scenarios) \
 [16. Interfaces and Abstract Classes](16.-Interfaces-and-Abstract-Classes.md#interfaces-and-abstract-classes) \
 [17. Context](17.-Context.md#context)
+
+# Consistency
+
+> > [!CAUTION]
+> It is possible to normalize data and denormalize a model while maintaining the exact same results, no matter how often you repeat this process.
+> If this is one of your requirements, and you are using Normalizer and Denormalizer methods, you have to be careful how you store the injected data
+> and how you return it, so that the results are matching.
+
+Here is a short example. Note, that the keys and structure returned from the normalizer method match the accessors from the denormalizer arguments.
+
+```php
+use Symfony\Component\Serializer\Attribute\Groups;
+use Zolex\VOM\Mapping as VOM;
+
+#[VOM\Model]
+class Calls
+{
+    private GenericModel $data;
+
+    #[VOM\Denormalizer]
+    public function denormalizeData(
+        #[VOM\Argument('[NESTED][ID_FOR_ONE]')]
+        int $id,
+        #[VOM\Argument('[NESTED][NAME_FOR_ONE]')]
+        string $name,
+    ): void {
+        $this->data = new GenericModel($id, $name);
+    }
+    
+    #[VOM\Normalizer]
+    public function getData(): array
+    {
+        return [
+            'NESTED' => [
+              'ID_FOR_ONE' => $this->data->getId(),
+              'NAME_FOR_ONE' => $this->data->getName(),
+           ],
+        ];
+    }
+}
+```
+
+\
+\
+Continue reading - [15. Scenarios](15.-Scenarios.md)
